# mirabuf

./: .gitignore  CNAME  LICENSE  README.md  assembly.proto  filetypes.proto  index.html  joint.proto  layout.proto  material.proto  mirabuf.proto  motor.proto  signal.proto  types.proto  world.proto
.github/workflows/: docs_gen.yml  npm_package.yml  proto_compile.yml  python_compile.yml
libs/node/: package.json
libs/python/: setup.py
libs/rust/: Cargo.toml
libs/rust/src/: lib.rs
