[package]
name = "mirabuf-rs"
version = "0.1.0"
edition = "2021"
crate-type = ["lib"]   # The crate types to generate.

[lib]
crate-type = ["cdylib"]
bench = false
path = "src/lib.rs"    # The source file of the target.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-protobuf = "0.8.0"